added backup endpoints to the api added backup loading to the frontend

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,10 @@
                         <div class="sb-nav-link-icon"><i class="fa fa-download"></i></div>
                         Demo Download
                     </a>
+                    <a class="nav-link" href="/backups">
+                        <div class="sb-nav-link-icon"><i class="fa fa-download"></i></div>
+                        Load Backup
+                    </a>
                     <div class="sb-sidenav-menu-heading">Admin</div>
                     <a class="nav-link" href="/config">
                         <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
