fixed bugs in db and restoring of match match restore now works by setting a env variable in the docker container

--- a/app/templates/config.html
+++ b/app/templates/config.html
@@ -57,7 +57,8 @@
                 "team2": document.getElementById("team2").value,
                 "best_of": document.getElementById("best_out_of_teams").value,
                 "check_auths": document.getElementById("check_auths").checked,
-                "host": document.getElementById("server").value
+                "host": document.getElementById("server").value,
+                "from_backup_url": null
             }));
 
             if (xmlHttp.status === 200) {
