added new passwords to rcon, gotv and db connections started documenting different env variables that need to be set to secure the api started using gunicorn to have multiple workers running on one instance

--- a/app/templates/public_status.html
+++ b/app/templates/public_status.html
@@ -48,7 +48,7 @@
     }
 
     let animating = 0;
-    let version = {{ version }};
+    let version = "{{ version }}";
     let phonetic_event_names = {
         "round_mvp": "MVPs",
         "grenade_thrown": "Granades",
