fixed a bug that occurred when no gstl tokens are left for a match

--- a/app/templates/public_status.html
+++ b/app/templates/public_status.html
@@ -7,7 +7,7 @@
     <h1 class="text-3xl font-bold ml-5 mt-5 mb-5">CS:GO LAN Tournament Status</h1>
 
     <h1 class="text-2xl font-bold ml-5 mt-5 mb-5">Total Stats</h1>
-    <div id="stats" class="flex flex-wrap font-extrabold flex-row justify-between p-5 m-5" style="overflow: hidden;">
+    <div id="stats" class="flex flex-wrap font-extrabold flex-row justify-between p-10" style="overflow: hidden;">
         <!-- List of stats will be inserted here -->
     </div>
 
