Implemented connect button

--- a/app/templates/public_status.html
+++ b/app/templates/public_status.html
@@ -362,6 +362,9 @@
                 <div class="text-4xl col-span-2 font-bold">${match.score[0]} : ${match.score[1]}</div>
                 <div class="text-base col-span-5 mt-1 justify-self-start flex items-center">${match.team_elo[1]} ELO</div>
               </div>
+              <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" href="steam://rungame/730/76561202255233023/+connect%20${match.server_ip}" >
+                 Connect
+              </button>
               <div class="text-sm mb-2">
                 Server IP: ${match.server_ip}
               </div>
