small changes and fixes

--- a/app/templates/public_status.html
+++ b/app/templates/public_status.html
@@ -4,7 +4,7 @@
 </head>
 <body id="body" class="bg-gray-800 text-white">
 <div class="lg:container lg:mx-auto">
-    <h1 class="text-3xl font-bold ml-5 mt-5 mb-5">CS:GO LAN Tournament Status</h1>
+    <h1 class="text-3xl font-bold ml-5 mt-5 mb-5">CS:GO LAN Tournament Status | csgo.robo4you.at</h1>
 
     <h1 class="text-2xl font-bold ml-5 mt-5 mb-5">Total Stats</h1>
     <div id="stats" class="flex flex-wrap font-extrabold flex-row justify-between p-10" style="overflow: hidden;">
