--- a/webserver/templates/err.html
+++ b/webserver/templates/err.html
@@ -1,57 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <title>500 Error</title>
-    <link href="/static/css/styles.css" rel="stylesheet"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
-            crossorigin="anonymous"></script>
-</head>
-<body>
-<div id="layoutError">
-    <div id="layoutError_content">
-        <main>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-6">
-                        <div class="text-center mt-4">
-                            <h1 class="display-1">{{ status_code }}</h1>
-                            <p class="lead">Server Error</p>
-                            <a href="/">
-                                <i class="fas fa-arrow-left mr-1"></i>
-                                Return to API Control
-                            </a>
-                        </div>
+{% extends "base_not_logged_in.html" %}
+{% block content %}
+
+    <section class="bg-primary relative z-10 py-[120px]">
+        <div class="container mx-auto">
+            <div class="-mx-4 flex">
+                <div class="w-full px-4">
+                    <div class="mx-auto max-w-[400px] text-center">
+                        <h2 class="mb-2 text-[50px] font-bold leading-none text-white sm:text-[80px] md:text-[100px]">
+                            {{ code }}
+                        </h2>
+                        <h4 class="mb-3 text-[22px] font-semibold leading-tight text-white">
+                            {{ message }}
+                        </h4>
+                        <p class="mb-8 text-lg text-white">
+                            {{ description }}
+                        </p>
+                        <a href="/"
+                           class="hover:text-primary inline-block rounded-lg border border-white px-8 py-3 text-center text-base font-semibold text-white transition hover:bg-white">
+                            Go To Home
+                        </a>
                     </div>
                 </div>
             </div>
-        </main>
-    </div>
-    <div id="layoutError_footer">
-        <footer class="py-4 bg-light mt-auto">
-            <div class="container-fluid">
-                <div class="d-flex align-items-center justify-content-between small">
-                    <div class="text-muted">Copyright &copy; Verein zur Förderung von Wissenschaft und Technik an
-                        Schulen (F-WuTS) 2010-2022
-                    </div>
-                    <div>
-                        <a href="https://robo4you.at/datenschutz">Privacy Policy</a>
-                        &middot;
-                        <a href="https://robo4you.at/kontakt">Contact Us</a>
-                    </div>
-                </div>
+        </div>
+        <div class="absolute top-0 left-0 -z-10 flex h-full w-full items-center justify-between space-x-5 md:space-x-8 lg:space-x-14">
+            <div class="h-full w-1/3 bg-gradient-to-t from-[#FFFFFF14] to-[#C4C4C400]"></div>
+            <div class="flex h-full w-1/3">
+                <div class="h-full w-1/2 bg-gradient-to-b from-[#FFFFFF14] to-[#C4C4C400]"></div>
+                <div class="h-full w-1/2 bg-gradient-to-t from-[#FFFFFF14] to-[#C4C4C400]"></div>
             </div>
-    </div>
-    </footer>
-</div>
-</div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-<script src="/static/js/scripts.js"></script>
-</body>
-</html>
+            <div class="h-full w-1/3 bg-gradient-to-b from-[#FFFFFF14] to-[#C4C4C400]"></div>
+        </div>
+    </section>
+
+{% endblock content %}
